tests/ui/traits/new-solver/dont-normalize-proj-with-error.stderr
error[E0412]: cannot find type `TypeError` in this scope
  --> $DIR/dont-normalize-proj-with-error.rs:17:20
   |
LL | fn type_error() -> TypeError { todo!() }
   |                    ^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
